Remove ugly mat-chip check

--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.html
@@ -19,7 +19,7 @@
         {{ readOptionDisplay(o) }}
         <button
           matChipRemove
-          (click)="onClick($event)"
+          (click)="$event.stopPropagation(); focus();"
           (focus)="onFocus($event)"
           (blur)="onBlur($event)">
           <mat-icon>cancel</mat-icon>
