Process custom dropdown templates
- display (selected values) block
- dropdown header/footer
- dropdown option

--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox-option.component.scss
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox-option.component.scss
@@ -1,7 +1,9 @@
 
 .ngx-mat-combobox-option {
 
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 8px;
   padding: 0 16px;
   line-height: 3em;
   height: 3em;
