--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.scss
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox.component.scss
@@ -10,6 +10,7 @@ $icon-size: 1.125em;
   &-display {
     flex: 1;
     display: flex;
+    align-items: center;
     cursor: pointer;
     &:before {
       content: " ";
@@ -52,7 +53,6 @@ $icon-size: 1.125em;
 
   &-input {
     flex: 1;
-    min-width: 100px;
   }
 
   &-trigger {
@@ -122,7 +122,7 @@ $icon-size: 1.125em;
     &-footer {
     }
 
-    &-overlay {
+    &-loading {
       display: flex;
       justify-content: center;
       align-items: center;
