--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   gap: 24px;
 
-  div {
+  > div {
     display: flex;
     gap: 24px;
   }
@@ -91,4 +91,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.custom-option-display {
+  border: solid 1px royalblue;
+  padding: 2px 4px;
+  border-radius: 4px;
+  color: white;
+  margin: 0 2px 2px 0;
+  background: linear-gradient(to right, royalblue, transparentize(royalblue, .33));
 }
