--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,284 +1,47 @@
 
+<mat-toolbar class="header mat-elevation-z8" color="primary">
+  <button mat-icon-button (click)="drawer.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>NgxMatCombobox examples</span>
+</mat-toolbar>
 
-<div>
+<mat-drawer-container autosize>
 
-  <mat-form-field appearance="fill">
-    <mat-label>Fill</mat-label>
-    <input matInput >
-    <mat-icon matPrefix>person</mat-icon>
-    <mat-icon matSuffix>face</mat-icon>
-  </mat-form-field>
+  <mat-drawer #drawer mode="side" opened class="menu mat-elevation-z2">
 
-  <mat-form-field appearance="outline">
-    <mat-label>Outline</mat-label>
-    <input matInput >
-    <mat-icon matPrefix>person</mat-icon>
-    <mat-icon matSuffix>face</mat-icon>
-  </mat-form-field>
+    <mat-nav-list>
+      <a mat-list-item href="#single-selection" (click)="scrollTo($event)">Single Selection</a>
+      <a mat-list-item href="#single-selection-autocomplete" (click)="scrollTo($event)">Single Selection Autocomplete</a>
+      <a mat-list-item href="#multiple-selection" (click)="scrollTo($event)">Multiple Selection</a>
+    </mat-nav-list>
 
-  <mat-form-field appearance="outline">
-     <input matInput >
-    <mat-icon matPrefix>person</mat-icon>
-    <mat-icon matSuffix>face</mat-icon>
-  </mat-form-field>
+  </mat-drawer>
 
-</div>
+  <div #content class="content">
 
+    <app-example-viewer
+      id="single-selection"
+      forComponent="app-single-selection"
+      title="Single Selection">
+      <app-single-selection></app-single-selection>
+    </app-example-viewer>
 
-<div>
-  <mat-card>
-    <mat-card-title>Example 1</mat-card-title>
-    <mat-card-content>
+    <app-example-viewer
+      id="single-selection-autocomplete"
+      forComponent="app-single-selection"
+      title="Single Selection with Autocomplete">
+      <app-single-selection></app-single-selection>
+    </app-example-viewer>
 
-      <p class="description">Single selection, no autocomplete</p>
+    <app-example-viewer
+      id="multiple-selection"
+      forComponent="app-multiple-selection"
+      title="Multiple Selection">
+      <app-multiple-selection></app-multiple-selection>
+    </app-example-viewer>
 
-      <div class="actions">
-        <button mat-stroked-button color="primary" (click)="example1 = [3,5,7,8]">Set value to [3,5,7,8]</button>
-        <button mat-stroked-button (click)="example1Combo.clear()">Clear</button>
-        Model = {{ example1 }}
-      </div>
+  </div>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Single selection</mat-label>
-        <ngx-mat-combobox
-          #example1Combo
-          required
-          optionValue="id"
-          optionLabel="name"
+</mat-drawer-container>
 
-          [(ngModel)]="example1"
-          (openedChange)="dropdownOpened($event)"
-          multiple
-          autocomplete
-
-          placeholder="Please select some value"
-          [dataSource]="getDatasource()">
-
-          <ng-template ngxMatComboboxDisplay let-combo>
-<!--            <div style="display: flex; align-items: center; flex-wrap: wrap">-->
-<!--              <span-->
-<!--                *ngFor="let o of combo.selectedOptions.value.slice(0, 5); let i = index; let l = last; trackBy: combo.trackOptionFn"-->
-<!--                class="custom-option-display">-->
-<!--                <img style="width:25px; height: 25px; border-radius: 50%; object-fit: cover" [src]="o.image">-->
-<!--                {{ o.name }}-->
-<!--                <button [ngxMatComboboxOptionRemove]="o">X</button>-->
-<!--              </span>-->
-<!--              <span *ngIf="combo.selectedOptions.value.length > 5">-->
-<!--                &nbsp;and {{ combo.selectedOptions.value.length - 5 }} more&hellip;-->
-<!--              </span>-->
-<!--            </div>-->
-            <mat-chip-list>
-              <mat-chip
-                [selected]="true"
-                [selectable]="false"
-                color="primary"
-                *ngFor="let o of combo.selectedOptions.value; let i = index; trackBy: combo.trackOptionFn">
-                <mat-chip-avatar>
-                  <img style="width:24px; height: 24px; object-fit: cover" [src]="o.image">
-                </mat-chip-avatar>
-                {{ o.name }}
-                <button matChipRemove [ngxMatComboboxOptionRemove]="o"><mat-icon>cancel</mat-icon></button>
-              </mat-chip>
-            </mat-chip-list>
-          </ng-template>
-
-          <ng-template ngxMatComboboxHeader>
-            <div class="custom-header">
-              <input ngxMatComboboxInput style="width: auto" #customSearchInput cdkFocusInitial placeholder="Type here..." />
-              <div class="mat-caption">
-                <mat-slide-toggle>Search in Name</mat-slide-toggle>
-                &nbsp;&nbsp;&nbsp;
-                <mat-slide-toggle>Search in Description</mat-slide-toggle>
-              </div>
-<!--              <input #xcustomSearchInput placeholder="Type another things here..." cdkFocusInitial (input)="typeAhead($event)" />-->
-            </div>
-          </ng-template>
-
-          <ng-template ngxMatComboboxOption let-option let-combo="combo">
-            <div style="display: flex; gap: 8px; align-items: center">
-              <mat-icon>{{ combo.isSelected(option) ? 'radio_button_checked' : 'radio_button_unchecked' }}</mat-icon>
-              <img style="width:24px; height: 24px; object-fit: cover; border-radius: 50%" [src]="option.image">
-              <span>{{ option.name }}</span>
-            </div>
-          </ng-template>
-
-          <ng-template ngxMatComboboxFooter>
-            <div class="custom-footer">
-              <button mat-flat-button><mat-icon>navigate_before</mat-icon>&nbsp;previous</button>
-              <button mat-flat-button>next&nbsp;<mat-icon>navigate_next</mat-icon></button>
-            </div>
-          </ng-template>
-
-        </ngx-mat-combobox>
-        <mat-icon matPrefix>person</mat-icon>
-        <mat-icon matSuffix>face</mat-icon>
-      </mat-form-field>
-
-    </mat-card-content>
-  </mat-card>
-
-
-  <mat-card>
-    <mat-card-title>Example 2</mat-card-title>
-    <mat-card-content>
-
-      <p class="description">Single selection with autocomplete</p>
-
-      <div class="actions">
-        <button mat-stroked-button color="primary" (click)="example2 = 5">Set value to 5</button>
-        <button mat-stroked-button (click)="example2Combo.clear()">Clear</button>
-        Model = {{ example2 }}
-      </div>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Single selection</mat-label>
-        <ngx-mat-combobox
-          #example2Combo
-          optionValue="id"
-          optionLabel="name"
-          [(ngModel)]="example2"
-          [autocomplete]="true"
-          useChips
-          placeholder="Type to search..."
-          [dataSource]="getDatasource()">
-        </ngx-mat-combobox>
-        <mat-icon matPrefix>person</mat-icon>
-        <mat-icon matSuffix>face</mat-icon>
-      </mat-form-field>
-
-    </mat-card-content>
-  </mat-card>
-</div>
-
-<div>
-  <mat-card style="width: 480px">
-    <mat-card-title>Example 3</mat-card-title>
-    <mat-card-content>
-
-      <p class="description">Multi selection, no autocomplete</p>
-
-      <div class="actions">
-        <button mat-stroked-button color="primary" (click)="example3 = [4,3,2]">Set value to [4,3,2]</button>
-        <button mat-stroked-button (click)="example3Combo.clear()">Clear</button>
-        Model = {{ example3 }}
-      </div>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Multi selection</mat-label>
-        <ngx-mat-combobox
-          #example3Combo
-          optionValue="id"
-          optionLabel="name"
-          [(ngModel)]="example3"
-          [multiple]="true"
-          [noWrap]="true"
-          placeholder="Please select at least one value"
-          [dataSource]="getDatasource()">
-        </ngx-mat-combobox>
-        <mat-icon matPrefix>person</mat-icon>
-        <mat-icon matSuffix>face</mat-icon>
-      </mat-form-field>
-
-    </mat-card-content>
-  </mat-card>
-
-
-  <mat-card style="width: 480px">
-    <mat-card-title>Example 4</mat-card-title>
-    <mat-card-content>
-
-      <p class="description">Multi selection with chips, no autocomplete</p>
-
-      <div class="actions">
-        <button mat-stroked-button color="primary" (click)="example4 = [2,3,4]">Set value to [2,3,4]</button>
-        <button mat-stroked-button (click)="example4Combo.clear()">Clear</button>
-        Model = {{ example4 }}
-      </div>
-
-      <mat-form-field appearance="fill">
-        <mat-label>Multi selection</mat-label>
-        <ngx-mat-combobox
-          #example4Combo
-          optionValue="id"
-          optionLabel="name"
-          [(ngModel)]="example4"
-          [multiple]="true"
-          [useChips]="true"
-          chipColor="accent"
-          placeholder="Select something..."
-          [dataSource]="getDatasource()">
-        </ngx-mat-combobox>
-        <mat-icon matPrefix>person</mat-icon>
-        <mat-icon matSuffix>face</mat-icon>
-      </mat-form-field>
-
-    </mat-card-content>
-  </mat-card>
-
-</div>
-
-<div>
-  <mat-card style="width: 480px">
-    <mat-card-title>Example 5</mat-card-title>
-    <mat-card-content>
-
-      <p class="description">Multi selection with autocomplete</p>
-
-      <div class="actions">
-        <button mat-stroked-button color="primary" (click)="example5 = [7,8,9]">Set value to [7,8,9]</button>
-        <button mat-stroked-button (click)="example5Combo.clear()">Clear</button>
-        Model = {{ example5 }}
-      </div>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Multi selection</mat-label>
-        <ngx-mat-combobox
-          #example5Combo
-          optionValue="id"
-          optionLabel="name"
-          [(ngModel)]="example5"
-          [multiple]="true"
-          [autocomplete]="true"
-          [dataSource]="getDatasource()">
-        </ngx-mat-combobox>
-        <mat-icon matPrefix>person</mat-icon>
-        <mat-icon matSuffix>face</mat-icon>
-      </mat-form-field>
-
-    </mat-card-content>
-  </mat-card>
-
-
-  <mat-card style="width: 480px">
-    <mat-card-title>Example 6</mat-card-title>
-    <mat-card-content>
-
-      <p class="description">Multi selection with chips with autocomplete</p>
-
-      <div class="actions">
-        <button mat-stroked-button color="primary" (click)="example6 = [7,8,9]">Set value to [7,8,9]</button>
-        <button mat-stroked-button (click)="example6Combo.clear()">Clear</button>
-        Model = {{ example6 }}
-      </div>
-
-      <mat-form-field appearance="outline">
-        <mat-label>Multi selection</mat-label>
-        <ngx-mat-combobox
-          #example6Combo
-          optionValue="id"
-          optionLabel="name"
-          [(ngModel)]="example6"
-          [multiple]="true"
-          [useChips]="true"
-          dropdownClass="my-super-dropdown"
-          [autocomplete]="true"
-          [dataSource]="getDatasource()">
-        </ngx-mat-combobox>
-        <mat-icon matPrefix>person</mat-icon>
-        <mat-icon matSuffix>face</mat-icon>
-      </mat-form-field>
-
-    </mat-card-content>
-  </mat-card>
-
-</div>
