--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -1,103 +1,33 @@
 :host {
 
-  padding: 24px;
-
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 48px;
 
-  > div {
+  padding-top:48px;
+
+  .header {
+    position: fixed;
+    z-index: 999;
+    top: 0;
     display: flex;
-    gap: 24px;
+    gap: 8px;
   }
 
-  .mat-card {
-    width: 480px;
+  .menu {
+    width: 256px;
+    position: fixed;
+    z-index: 998;
+    top: 0;
+    left: 0;
+    padding-top: 64px;
   }
 
-  .mat-card-content {
+  .content {
+    padding: 64px 48px;
     display: flex;
     flex-direction: column;
-    gap: 8px;
-    //font-size: inherit;
+    gap: 48px;
   }
 
-  .description {
-
-  }
-
-  .actions {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  }
-
-  /*::ng-deep .mat-form-field {
-    .mat-chip-list-wrapper {
-      margin: -4px 0 !important;
-    }
-    .mat-chip {
-      margin: 0px 2px 2px 0px !important;
-      padding: 3px 8px !important;
-      border-radius: 4px;
-      line-height: 1.125em;
-      min-height: auto;
-      height: auto;
-      font-weight: 400;
-    }
-    .ngx-mat-combobox-input {
-      margin: 0px 2px 2px 0px !important;
-      //padding-left: 8px;
-    }
-    .mat-chip-remove {
-      transform: translateX(4px);
-      position: relative;
-      width: 1em;
-      height: 1em;
-    }
-    .mat-chip-remove.mat-icon,
-    .mat-chip-remove .mat-icon {
-      //display: none;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%);
-      width: 1em;
-      height: 1em;
-      font-size: 1.25em;
-    }
-  }*/
-
-}
-
-.custom-header {
-  padding: 12px 16px;
-  border-bottom: solid 1px lightgrey;
-  display: flex;
-  gap: 13px;
-  flex-direction: column;
-
-  input {
-    border: solid 1px lightgrey;
-    border-radius: 4px;
-    padding: 8px;
-    outline: none;
-  }
-}
-
-.custom-footer {
-  padding: 6px 16px 5px;
-  border-top: solid 1px lightgrey;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.custom-option-display {
-  border: solid 1px royalblue;
-  padding: 2px 4px;
-  border-radius: 4px;
-  color: white;
-  margin: 0 2px 2px 0;
-  background: linear-gradient(to right, royalblue, transparentize(royalblue, .33));
 }
