--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -3,7 +3,10 @@
   <button mat-icon-button (click)="drawer.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>NgxMatCombobox examples</span>
+  <h1>NgxMatCombobox examples</h1>
+  <a mat-icon-button target="_blank" href="https://github.com/w3soto/ngx-mat-combobox">
+    <mat-icon svgIcon="github"></mat-icon>
+  </a>
 </mat-toolbar>
 
 <mat-drawer-container autosize>
