--- a/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox-option.component.scss
+++ b/projects/ngx-mat-combobox/src/lib/ngx-mat-combobox-option.component.scss
@@ -6,18 +6,17 @@
   gap: 8px;
   padding: 0 16px;
   line-height: 3em;
-  height: 3em;
+  min-height: 3em;
   cursor: pointer;
 
-  &-selected {
+  &-selected:not(.ngx-mat-combobox-option-multiple) {
     background-color: #e5e5e5;
   }
 
   //&:focus,
-  //&:hover,
+  &:hover,
   &-active {
     background: rgba(0,0,0,.04);
-    //border: solid 1px red;
   }
 
 }
