--- a/projects/demo/src/app/example-viewer/example-viewer.component.scss
+++ b/projects/demo/src/app/example-viewer/example-viewer.component.scss
@@ -29,6 +29,14 @@ $border-color: rgba(0,0,0,.12);
       padding: 48px;
     }
 
+    &__description {
+      margin-bottom: 48px;
+      background-color: #f5f5f5;
+      border-radius: 4px;
+      padding: 8px 16px;
+      font-style: italic;
+    }
+
     &__code {
       white-space: pre;
       display: block;
