--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -2,6 +2,7 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
+// select from https://nowzoo.github.io/ngx-highlight-js/
 @import '~highlight.js/styles/github-dark.css';
 
 html, body {
@@ -11,3 +12,8 @@ html, body {
   margin: 0;
   color: #666;
 }
+
+p {
+  margin-bottom: 0;
+}
+
